Version 16.31 - 6 June 2014

- xorg config:
  o rely on evdev/udev for input devices
  o Wacom tablets should work better
    (we now load the wacom driver again)
  o Synaptics touchpads should now work during install (mga#11524)

Version 16.30 - 4 June 2014

- locale setting
  o update locales list
- drop (broken) support for Alpha, PPC, Sparc & IA64
- add some POD documentation
- do not unavailable kernel-xbox
- change detection order of bootloader so that it'll prioritize in the order
  of grub2 -> grub -> lilo rather than lilo -> grub -> grub2
- in stead of modifying /etc/passwd directly, just simply use 'usermod'
- add support for SHA512
- properly enable nofsync for package installation
- drop (broken) support for Alpha, PPC, Sparc & IA64

Version 16.29 -  3 May 2014

- gnome-icon-theme is now adwaita-icon-theme

Version 16.28 - 28 April 2014

- recognize new kernel-3.14 drivers

Version 16.27.1 - 29 April 2014

- add support for merging updated translations from Mageia

Version 16.27 - 16 April 2014

- media step:
  o hint that nonfree is needed if a driver needs a nonfree firmware

Version 16.27 - 18 February 2014

- fix crash when choosing a RTL language (mga#12793)
- Ensure uid/gid extraction works when adding users via summary page
  (fixes chown'ing user to root when adding existing user on upgrade mga#12375)

Version 16.26.6 - 23 January 2014

- fix hidden icon in individual package selection (mga#12397)

Version 16.26.5 - 22 January 2014

- release notes dialog:
  o fix untranslated button

Version 16.26.4 - 22 January 2014

- debug image:
  o add a warning about QWERTY keyboard
- help dialogs:
  o do warn on first screenshot (mga#11176)
  o fix lost help screenshots (mga#11176)

Version 16.26.3 - 21 January 2014

- help dialogs:
  o do not warn if a screenshot already has been taked (mga#11176)

Version 16.26.2 - 20 January 2014

- left background for final release of Mageia 4

Version 16.26.1 - 20 January 2014

- partitioning: