@@ -1,3 +1,5 @@
+- include udev rule for VMmouse
+
 Version 16.31 - 6 June 2014
 
 - xorg config:
